Fix excessive padding on mobile

--- a/assets/application.css
+++ b/assets/application.css
@@ -227,7 +227,7 @@ body {
 main {
   margin: auto;
   max-width: 50rem;
-  padding: 5rem;
+  padding: 1.5rem;
 }
 
 .highlight .k {
